--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": false,
-  "name": "vuex-state",
+  "name": "vuex-simple-state",
   "version": "0.0.1",
   "description": "Vue plugin that makes setting and getting state simple",
   "main": "./dist/index.js",
