--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "private": false,
   "name": "vuex-simple-state",
-  "version": "0.0.4",
+  "version": "0.0.28",
   "description": "Vue plugin that makes setting and getting state simple",
-  "main": "./dist/index.js",
+  "main": "./dist/index.es.js",
   "scripts": {
-    "build": "bili --bundle-node-modules --format cjs --format esm --format esm-min --format cjs-min"
+    "build": "bili --bundle-node-modules --format esm --format esm-min --format cjs-min --format cjs"
   },
   "files": [
     "dist/*"
